# pish

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  pish.service
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: codeartifact-architecture.drawio
githooks/: pre-commit
pish-core/: Cargo.toml
pish-core/src/: lib.rs  services.rs  widget.rs
pish-shell/: Cargo.toml
pish-shell/src/: home.rs  lib.rs  main.rs  shell.rs
scripts/: build-pi.sh  deploy-pi.sh  install-hooks.sh  run-local.sh
widgets/bootboots/: Cargo.toml
widgets/bootboots/src/: lib.rs
widgets/clock/: Cargo.toml
widgets/clock/src/: lib.rs
widgets/nakostat/: Cargo.toml
widgets/nakostat/src/: lib.rs
